[F] Fix grades page button alignment

--- a/GPACalc.UI/web/styles/app.css
+++ b/GPACalc.UI/web/styles/app.css
@@ -60,8 +60,9 @@
     margin-right: -10px;
 }
 
-.hy-operating-buttons.mar
+.hy-operating-buttons.grades-page
 {
+    float: right;
     margin-top: 20px;
     margin-bottom: 20px;
 }
